# lcatricity_dataschema

./: README.md  pyproject.toml  requirements.txt
lcatricity_dataschema/: base.py
lcatricity_dataschema.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lcatricity_dataschema/sql/: 2024078_insertElectricityGenerationTypeMappingsForDataGaps.sql  create_electricity_generation_new.sql
migrations/: 20240728_fix_generationtypeid_electricitygeneration.sql
